chore: add readme and update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_API_BASE_URL=https://jsonplaceholder.typicode.com
+NEXT_PUBLIC_API_BASE_URL=https://fakestoreapi.com
 NEXT_SESSION_PASSWORD=complex_password_at_least_32_characters_long
+NEXT_COOKIE_NAME=iron-examples-app-router-client-component-route-handler-swr
